--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -1,9 +1,14 @@
+<h1>Edit an Article</h1>
+<hr>
+<br>
 <form method="POST" action="/articles/<%= @article.id %>">
-    <input id="hidden" type="hidden" name="_method" value="patch">
+    <input type="hidden" name="_method" value="patch">
     <label for="title">Title: </label>
     <input type="text" id="title" name="title" value= <%= @article.title%>>
+    <br>
     <label for="content">Content: </label>
     <input type="text" id="content" name="content" value =<%= @article.content%>>
-    <input type="submit" id="submit" value="submit">
+    <br>
+    <input type="submit" value="Edit">
 </form>
 
