--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,4 +1,8 @@
+<h1>List of all Articles</h1>   
+<hr>
+<br>
 <%@articles.each do |article|%>
-    <%= article.title %>
-    <%= article.content %>
+    <h1>Title: <%= article.title %></h1>
+    <p>Content: <%= article.content %></p>
+    <hr/>
 <% end %>
