--- a/app/views/new.erb
+++ b/app/views/new.erb
@@ -1,7 +1,12 @@
+<h1>Create a new Article</h1>
+<hr>
+<br>
 <form method="POST" action="/articles">
     <label for="title">Title: </label>
     <input type="text" id="title" name="title">
+    <br>
     <label for="content">Content: </label>
-    <input type="text" id="content" name="content">
+    <textarea type="text" id="content" name="content"></textarea>
+    <br>
     <input type="submit" id="submit" value="submit">
 </form>
